refactor: `TagReader` is now `Directives`
First the name is now more alligned with how we actually refer to the
special //-lines in our scripts and second it the `Reader` part was
dropped as future implementation might actually not read anything.