@@ -3,6 +3,7 @@ package dev.jbang.source.parser;
 import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
@@ -25,39 +26,46 @@ import dev.jbang.dependencies.MavenRepo;
 import dev.jbang.util.JavaUtil;
 import dev.jbang.util.Util;
 
-public abstract class TagReader {
-	public static final String REPOS_COMMENT_PREFIX = "REPOS";
-	public static final String DEPS_COMMENT_PREFIX = "DEPS";
-	public static final String FILES_COMMENT_PREFIX = "FILES";
-	public static final String SOURCES_COMMENT_PREFIX = "SOURCES";
-	public static final String COMPILE_OPTIONS_COMMENT_PREFIX = "COMPILE_OPTIONS";
-	public static final String JAVAC_OPTIONS_COMMENT_PREFIX = "JAVAC_OPTIONS";
-	public static final String NATIVE_OPTIONS_COMMENT_PREFIX = "NATIVE_OPTIONS";
-	public static final String RUNTIME_OPTIONS_COMMENT_PREFIX = "RUNTIME_OPTIONS";
-	public static final String JAVA_OPTIONS_COMMENT_PREFIX = "JAVA_OPTIONS";
-	public static final String MAIN_COMMENT_PREFIX = "MAIN";
-	public static final String MODULE_COMMENT_PREFIX = "MODULE";
-	public static final String DESCRIPTION_COMMENT_PREFIX = "DESCRIPTION";
-	public static final String GAV_COMMENT_PREFIX = "GAV";
-	public static final String DOCS_COMMENT_PREFIX = "DOCS";
-	public static final String JAVA_COMMENT_PREFIX = "JAVA";
-	public static final String JAVAAGENT_COMMENT_PREFIX = "JAVAAGENT";
-	public static final String CDS_COMMENT_PREFIX = "CDS";
-	public static final String PREVIEW_COMMENT_PREFIX = "PREVIEW";
-	public static final String NOINTEGRATIONS_COMMENT_PREFIX = "NOINTEGRATIONS";
+public abstract class Directives {
+	public abstract static class Names {
+		public static final String CDS = "CDS";
+		public static final String COMPILE_OPTIONS = "COMPILE_OPTIONS";
+		public static final String DEPS = "DEPS";
+		public static final String DESCRIPTION = "DESCRIPTION";
+		public static final String DOCS = "DOCS";
+		public static final String FILES = "FILES";
+		public static final String GAV = "GAV";
+		public static final String JAVAAGENT = "JAVAAGENT";
+		public static final String JAVAC_OPTIONS = "JAVAC_OPTIONS";
+		public static final String JAVA = "JAVA";
+		public static final String JAVA_OPTIONS = "JAVA_OPTIONS";
+		public static final String MAIN = "MAIN";
+		public static final String MANIFEST = "MANIFEST";
+		public static final String MODULE = "MODULE";
+		public static final String NATIVE_OPTIONS = "NATIVE_OPTIONS";
+		public static final String NOINTEGRATIONS = "NOINTEGRATIONS";
+		public static final String PREVIEW = "PREVIEW";
+		public static final String REPOS = "REPOS";
+		public static final String RUNTIME_OPTIONS = "RUNTIME_OPTIONS";
+		public static final String SOURCES = "SOURCES";
+
+		// Directives introduced by non-Java source types extensions
+		public static final String GROOVY = "GROOVY";
+		public static final String KOTLIN = "KOTLIN";
+	}
 
 	public abstract Stream<Directive> getTags();
 
-	public List<String> collectBinaryDependencies() {
+	public List<String> binaryDependencies() {
 		return getTags()
 			.filter(this::isDependDeclare)
 			.map(Directive::getValue)
 			.flatMap(v -> quotedStringToList(Q2TL_SSCT, v).stream())
-			.filter(TagReader::isGav)
+			.filter(Directives::isGav)
 			.collect(Collectors.toList());
 	}
 
-	public List<String> collectSourceDependencies() {
+	public List<String> sourceDependencies() {
 		return getTags()
 			.filter(this::isDependDeclare)
 			.map(Directive::getValue)
@@ -67,14 +75,14 @@ public abstract class TagReader {
 	}
 
 	protected boolean isDependDeclare(Directive d) {
-		return DEPS_COMMENT_PREFIX.equals(d.getName());
+		return Names.DEPS.equals(d.getName());
 	}
 
 	private static boolean isGav(String ref) {
 		return DependencyUtil.looksLikeAPossibleGav(ref) || !JitPackUtil.ensureGAV(ref).equals(ref);
 	}
 
-	public List<MavenRepo> collectRepositories() {
+	public List<MavenRepo> repositories() {
 		return getTags()
 			.filter(this::isRepoDeclare)
 			.map(Directive::getValue)
@@ -84,7 +92,7 @@ public abstract class TagReader {
 	}
 
 	protected boolean isRepoDeclare(Directive d) {
-		return REPOS_COMMENT_PREFIX.equals(d.getName());
+		return Names.REPOS.equals(d.getName());
 	}
 
 	public List<KeyValue> collectDocs() {
@@ -97,34 +105,30 @@ public abstract class TagReader {
 	}
 
 	protected boolean isDocsDeclare(Directive d) {
-		return DOCS_COMMENT_PREFIX.equals(d.getName());
+		return Names.DOCS.equals(d.getName());
 	}
 
-	public Optional<String> getDescription() {
+	public String description() {
 		String desc = getTags()
 			.filter(this::isDescriptionDeclare)
 			.map(Directive::getValue)
 			.filter(Objects::nonNull)
 			.collect(Collectors.joining("\n"));
-		if (desc.isEmpty()) {
-			return Optional.empty();
-		} else {
-			return Optional.of(desc);
-		}
+		return desc.isEmpty() ? null : desc;
 	}
 
 	protected boolean isDescriptionDeclare(Directive d) {
-		return DESCRIPTION_COMMENT_PREFIX.equals(d.getName());
+		return Names.DESCRIPTION.equals(d.getName());
 	}
 
-	public Optional<String> getMain() {
+	public String mainMethod() {
 		List<String> mains = getTags()
 			.filter(this::isMainDeclare)
 			.map(Directive::getValue)
 			.filter(Objects::nonNull)
 			.collect(Collectors.toList());
 		if (mains.isEmpty()) {
-			return Optional.empty();
+			return null;
 		} else {
 			if (mains.size() > 1) {
 				Util.warnMsg(
@@ -134,30 +138,30 @@ public abstract class TagReader {
 				throw new IllegalArgumentException(
 						"//MAIN line has wrong format, should be '//MAIN fullyQualifiedClassName]'");
 			}
-			return Optional.of(mains.get(0));
+			return mains.get(0);
 		}
 	}
 
 	protected boolean isMainDeclare(Directive d) {
-		return MAIN_COMMENT_PREFIX.equals(d.getName());
+		return Names.MAIN.equals(d.getName());
 	}
 
-	public Optional<String> getModule() {
+	public String module() {
 		List<String> mods = getTags()
 			.filter(this::isModuleDeclare)
 			.map(d -> d.getValue() != null ? d.getValue() : "")
 			.collect(Collectors.toList());
 		if (mods.isEmpty()) {
-			return Optional.empty();
+			return null;
 		} else {
 			if (mods.size() > 1) {
 				Util.warnMsg(
 						"Multiple //MODULE lines found, only one should be defined in a source file. Using the first");
 			}
 			if (mods.get(0).isEmpty()) {
-				return Optional.of("");
+				return "";
 			} else if (Util.isValidModuleIdentifier(mods.get(0))) {
-				return Optional.of(mods.get(0));
+				return mods.get(0);
 			} else {
 				throw new IllegalArgumentException(
 						"//MODULE line has wrong format, should be '//MODULE [identifier]'");
@@ -166,16 +170,16 @@ public abstract class TagReader {
 	}
 
 	protected boolean isModuleDeclare(Directive d) {
-		return MODULE_COMMENT_PREFIX.equals(d.getName());
+		return Names.MODULE.equals(d.getName());
 	}
 
-	public Optional<String> getGav() {
+	public String gav() {
 		List<String> gavs = getTags()
 			.filter(this::isGavDeclare)
 			.map(Directive::getValue)
 			.collect(Collectors.toList());
 		if (gavs.isEmpty()) {
-			return Optional.empty();
+			return null;
 		} else {
 			if (gavs.size() > 1) {
 				Util.warnMsg(
@@ -185,12 +189,12 @@ public abstract class TagReader {
 				throw new IllegalArgumentException(
 						"//GAV line has wrong format, should be '//GAV groupid:artifactid[:version]'");
 			}
-			return Optional.of(gavs.get(0));
+			return gavs.get(0);
 		}
 	}
 
 	protected boolean isGavDeclare(Directive d) {
-		return GAV_COMMENT_PREFIX.equals(d.getName());
+		return Names.GAV.equals(d.getName());
 	}
 
 	private static String gavWithVersion(String gav) {
@@ -200,54 +204,74 @@ public abstract class TagReader {
 		return gav;
 	}
 
-	public List<KeyValue> collectManifestOptions() {
-		return collectTagOptions("MANIFEST");
+	public List<KeyValue> manifestOptions() {
+		return collectDirectiveOptions(Names.MANIFEST);
 	}
 
-	public List<KeyValue> collectAgentOptions() {
-		return collectTagOptions("JAVAAGENT");
+	public List<KeyValue> agentOptions() {
+		return collectDirectiveOptions(Names.JAVAAGENT);
 	}
 
-	private List<KeyValue> collectTagOptions(String name) {
-		return collectRawOptions(name).stream()
-			.filter(Objects::nonNull)
-			.flatMap(v -> quotedStringToList(Q2TL_SSCT, v).stream())
+	public boolean isAgent() {
+		return collectDirectives(Names.JAVAAGENT).anyMatch(d -> true);
+	}
+
+	public boolean enableCDS() {
+		return collectDirectives(Names.CDS).anyMatch(d -> true);
+	}
+
+	public boolean enablePreview() {
+		return collectDirectives(Names.PREVIEW).anyMatch(d -> true);
+	}
+
+	public boolean disableIntegrations() {
+		return collectDirectives(Names.NOINTEGRATIONS).anyMatch(d -> true);
+	}
+
+	private List<KeyValue> collectDirectiveOptions(String name) {
+		return collectOptions(name)
 			.map(KeyValue::of)
 			.collect(Collectors.toCollection(ArrayList::new));
 	}
 
 	@NonNull
-	public List<String> collectOptions(String... names) {
-		List<String> options = collectTags(names);
-		// convert quoted content to list of strings as
-		// just passing "--enable-preview --source 14" fails
-		return quotedStringToList(Q2TL_SPACES, String.join(" ", options));
-	}
-
-	@NonNull
-	public List<String> collectTags(String... names) {
-		List<String> tags;
-		if (names.length > 1) {
-			tags = new ArrayList<>();
-			for (String name : names) {
-				tags.addAll(collectRawOptions(name));
-			}
-		} else {
-			tags = collectRawOptions(names[0]);
-		}
-		return tags;
-	}
-
-	@NonNull
-	List<String> collectRawOptions(String name) {
-		List<String> javaOptions = getTags()
-			.filter(d -> d.getName().equals(name))
-			.map(Directive::getValue)
+	public List<String> compileOptions() {
+		return collectOptions(Names.COMPILE_OPTIONS, Names.JAVAC_OPTIONS)
 			.collect(Collectors.toList());
+	}
+
+	@NonNull
+	public List<String> runtimeOptions() {
+		return collectOptions(Names.RUNTIME_OPTIONS, Names.JAVA_OPTIONS)
+			.collect(Collectors.toList());
+	}
+
+	@NonNull
+	public List<String> nativeOptions() {
+		return collectOptions(Names.NATIVE_OPTIONS).collect(Collectors.toList());
+	}
+
+	@NonNull
+	public Stream<String> collectOptions(String... names) {
+		return collectDirectives(names)
+			.filter(Objects::nonNull)
+			.flatMap(v -> quotedStringToList(Q2TL_SPACES, v).stream());
+	}
+
+	@NonNull
+	public Stream<String> collectDirectives(String... names) {
+		return Arrays.stream(names).flatMap(this::collectDirective);
+	}
+
+	@NonNull
+	protected Stream<String> collectDirective(String name) {
+		Stream<String> javaOptions = getTags()
+			.filter(d -> d.getName().equals(name))
+			.map(Directive::getValue);
 
 		String envOptions = System.getenv("JBANG_" + name);
 		if (envOptions != null) {
-			javaOptions.add(envOptions);
+			javaOptions = Stream.concat(javaOptions, Stream.of(envOptions));
 		}
 		return javaOptions;
 	}
@@ -279,7 +303,7 @@ public abstract class TagReader {
 		return matchList;
 	}
 
-	public String getJavaVersion() {
+	public String javaVersion() {
 		Optional<String> version = collectJavaVersions().stream()
 			.filter(JavaUtil::checkRequestedVersion)
 			.max(new JavaUtil.RequestedVersionComparator());
@@ -287,10 +311,10 @@ public abstract class TagReader {
 	}
 
 	private List<String> collectJavaVersions() {
-		return collectTags(JAVA_COMMENT_PREFIX);
+		return collectDirectives(Names.JAVA).collect(Collectors.toList());
 	}
 
-	public List<String> collectSources() {
+	public List<String> sources() {
 		return getTags()
 			.filter(this::isSourcesDeclare)
 			.map(Directive::getValue)
@@ -299,10 +323,10 @@ public abstract class TagReader {
 	}
 
 	protected boolean isSourcesDeclare(Directive d) {
-		return SOURCES_COMMENT_PREFIX.equals(d.getName());
+		return Names.SOURCES.equals(d.getName());
 	}
 
-	public List<KeyValue> collectFiles() {
+	public List<KeyValue> files() {
 		return getTags().filter(this::isFilesDeclare)
 			.map(Directive::getValue)
 			.flatMap(v -> quotedStringToList(Q2TL_SSCT, v).stream())
@@ -311,7 +335,7 @@ public abstract class TagReader {
 	}
 
 	protected boolean isFilesDeclare(Directive d) {
-		return FILES_COMMENT_PREFIX.equals(d.getName());
+		return Names.FILES.equals(d.getName());
 	}
 
 	/**
@@ -404,11 +428,11 @@ public abstract class TagReader {
 	}
 
 	/**
-	 * This class extends the default <code>TagReader</code> with support for Groovy
-	 * "grab" annotations.
+	 * This class extends the default <code>Directives</code> with support for
+	 * Groovy "grab" annotations.
 	 */
-	public static class Extended extends TagReader {
-		private final String contents;
+	public static class Extended extends Directives {
+		private String contents;
 		private final Function<String, String> propertiesReplacer;
 		private List<Directive> tags;
 
@@ -447,6 +471,7 @@ public abstract class TagReader {
 					.map(line -> toDirective(line, propertiesReplacer))
 					.filter(Objects::nonNull)
 					.collect(Collectors.toList());
+				contents = null;
 			}
 			return tags.stream();
 		}
@@ -500,12 +525,12 @@ public abstract class TagReader {
 					gav = "'" + gav + "'";
 				}
 				if (!gav.isEmpty()) { // protects when @Grab might be inside a string (like jbang source)
-					result = new ExtendedDirective(DEPS_COMMENT_PREFIX, gav);
+					result = new ExtendedDirective(Names.DEPS, gav);
 				}
 			} else {
 				matcher = DEPS_ANNOT_SINGLE.matcher(line);
 				if (matcher.find()) {
-					result = new ExtendedDirective(DEPS_COMMENT_PREFIX, matcher.group("value"));
+					result = new ExtendedDirective(Names.DEPS, matcher.group("value"));
 				}
 			}
 			return result;
@@ -542,12 +567,12 @@ public abstract class TagReader {
 				// repo contains a comma (it shouldn't, but it does), so quote it
 				repo = "'" + repo + "'";
 			}
-			return new ExtendedDirective(REPOS_COMMENT_PREFIX, repo);
+			return new ExtendedDirective(Names.REPOS, repo);
 		}
 	}
 
-	public static class JbangProject extends TagReader {
-		private final String contents;
+	public static class JbangProject extends Directives {
+		private String contents;
 		private final Function<String, String> propertiesReplacer;
 
 		private List<Directive> tags;
@@ -565,6 +590,7 @@ public abstract class TagReader {
 					.map(line -> toDirective(line, propertiesReplacer))
 					.filter(Objects::nonNull)
 					.collect(Collectors.toList());
+				contents = null;
 			}
 			return tags.stream();
 		}
